[gd_scene load_steps=4 format=3 uid="uid://c77c572tdbd70"]

[ext_resource type="Script" path="res://Scripts/base_auto_weapon.gd" id="1_maxx4"]
[ext_resource type="Texture2D" uid="uid://6de5tkjnemft" path="res://icon.svg" id="2_wiq5u"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_42klc"]
size = Vector2(37, 24)

[node name="BaseAutoWeapon" type="Area2D"]
script = ExtResource("1_maxx4")

[node name="art" type="Node2D" parent="."]
scale = Vector2(0.5, 0.5)

[node name="Sprite2D" type="Sprite2D" parent="art"]
position = Vector2(46, 0)
texture = ExtResource("2_wiq5u")
region_enabled = true
region_rect = Rect2(8.333, 65.112, 56, 22)

[node name="Sprite2D2" type="Sprite2D" parent="art"]
position = Vector2(9, 13)
scale = Vector2(0.321429, 2.18182)
texture = ExtResource("2_wiq5u")
region_enabled = true
region_rect = Rect2(8.333, 65.112, 56, 22)

[node name="FirePoint" type="Node2D" parent="."]
position = Vector2(37, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(18.5, 6)
shape = SubResource("RectangleShape2D_42klc")

[node name="FireTimer" type="Timer" parent="."]

[connection signal="timeout" from="FireTimer" to="." method="fire_weapon"]
